# bazel-cgo

./: README.md  WORKSPACE
cgo-puts/: BUILD.bazel  main.go
hello/: BUILD.bazel
