load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "cgo-puts",
    embed = [":cgo-puts_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cgo-puts_lib",
    srcs = ["main.go"],
    cgo = True,
    importpath = "cgo-puts",
    visibility = ["//visibility:private"],
)
